# deutsch-agent

./: .gitignore  README.md
apps/api/: .env.example  main.py  pyproject.toml
apps/api/core/: config.py  errors.py  logger.py
apps/api/graphs/: graph.py
apps/api/graphs/agents/: example_retriever.py  grammar_annotator.py  qa_dialogue_generator.py  term_miner.py  topic_planner.py  validator.py
apps/api/routers/: packs.py  practice.py  topics.py
apps/api/schemas/: common.py  pack.py  topic.py
apps/api/tools/exporters/: csv_export.py  md_export.py  pdf_export.py
apps/api/tools/fetchers/: dwds.py  wiktionary.py
apps/api/tools/llm/: ollama_client.py  prompts.py
apps/api/tools/nlp/: articles.py  conjugate_de.py  sanitize.py
apps/api/tools/retrieval/: bm25.py  translate.py  vector.py
apps/web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/level/a1/: page.tsx
apps/web/app/level/a2/: page.tsx
apps/web/app/level/b1/: page.tsx
apps/web/app/level/b2/: page.tsx
apps/web/app/level/c1/: page.tsx
apps/web/app/level/c2/: page.tsx
apps/web/app/practice/: page.tsx
apps/web/app/topics/: page.tsx
apps/web/app/topics/[slug]/: page.tsx
apps/web/components/: ErrorBoundary.tsx  Flashcard.tsx  Loader.tsx  Navbar.tsx  ThemeToggle.tsx  TopicCard.tsx
apps/web/lib/: apiClient.ts  config.ts  logger.ts  types.ts
apps/web/lib/hooks/: usePackGeneration.ts
apps/web/styles/: globals.css
